@@ -32,6 +32,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -43,6 +53,18 @@ operator|.
 name|io
 operator|.
 name|PrintStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|NoSuchFileException
 import|;
 end_import
 
@@ -861,6 +883,10 @@ block|}
 catch|catch
 parameter_list|(
 name|EOFException
+decl||
+name|NoSuchFileException
+decl||
+name|FileNotFoundException
 name|e
 parameter_list|)
 block|{
@@ -868,7 +894,7 @@ throw|throw
 operator|new
 name|CorruptIndexException
 argument_list|(
-literal|"Unexpected end of file while reading index."
+literal|"Unexpected file read error while reading index."
 argument_list|,
 name|input
 argument_list|,
