@@ -3335,46 +3335,14 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|IOException
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|!=
-literal|null
-operator|&&
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|startsWith
+name|handleFakeIOException
 argument_list|(
-literal|"a random IOException"
-argument_list|)
-condition|)
-block|{
-name|exceptionStream
-operator|.
-name|println
-argument_list|(
-literal|"\nTEST: got expected fake exc:"
-operator|+
 name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|e
-operator|.
-name|printStackTrace
-argument_list|(
+argument_list|,
 name|exceptionStream
 argument_list|)
 expr_stmt|;
@@ -3382,17 +3350,6 @@ name|allowAlreadyClosed
 operator|=
 literal|true
 expr_stmt|;
-block|}
-else|else
-block|{
-name|Rethrow
-operator|.
-name|rethrow
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 if|if
 condition|(
@@ -3578,46 +3535,14 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|IOException
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|!=
-literal|null
-operator|&&
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|startsWith
+name|handleFakeIOException
 argument_list|(
-literal|"a random IOException"
-argument_list|)
-condition|)
-block|{
-name|exceptionStream
-operator|.
-name|println
-argument_list|(
-literal|"\nTEST: got expected fake exc:"
-operator|+
 name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|e
-operator|.
-name|printStackTrace
-argument_list|(
+argument_list|,
 name|exceptionStream
 argument_list|)
 expr_stmt|;
@@ -3625,17 +3550,6 @@ name|allowAlreadyClosed
 operator|=
 literal|true
 expr_stmt|;
-block|}
-else|else
-block|{
-name|Rethrow
-operator|.
-name|rethrow
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 block|}
@@ -3658,46 +3572,14 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|IOException
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|!=
-literal|null
-operator|&&
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|startsWith
+name|handleFakeIOException
 argument_list|(
-literal|"a random IOException"
-argument_list|)
-condition|)
-block|{
-name|exceptionStream
-operator|.
-name|println
-argument_list|(
-literal|"\nTEST: got expected fake exc:"
-operator|+
 name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|e
-operator|.
-name|printStackTrace
-argument_list|(
+argument_list|,
 name|exceptionStream
 argument_list|)
 expr_stmt|;
@@ -3715,17 +3597,6 @@ name|Throwable
 name|t
 parameter_list|)
 block|{}
-block|}
-else|else
-block|{
-name|Rethrow
-operator|.
-name|rethrow
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 name|dir
 operator|.
@@ -3811,6 +3682,87 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|handleFakeIOException
+specifier|private
+name|void
+name|handleFakeIOException
+parameter_list|(
+name|IOException
+name|e
+parameter_list|,
+name|PrintStream
+name|exceptionStream
+parameter_list|)
+block|{
+name|Throwable
+name|ex
+init|=
+name|e
+decl_stmt|;
+while|while
+condition|(
+name|ex
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"a random IOException"
+argument_list|)
+condition|)
+block|{
+name|exceptionStream
+operator|.
+name|println
+argument_list|(
+literal|"\nTEST: got expected fake exc:"
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ex
+operator|.
+name|printStackTrace
+argument_list|(
+name|exceptionStream
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+name|ex
+operator|=
+name|ex
+operator|.
+name|getCause
+argument_list|()
+expr_stmt|;
+block|}
+name|Rethrow
+operator|.
+name|rethrow
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
